--- a/Demo_TiltBall_mcmaceac/local.properties
+++ b/Demo_TiltBall_mcmaceac/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 19 16:07:16 EDT 2017
-sdk.dir=C\:\\Users\\mcmma\\AppData\\Local\\Android\\Sdk
+#Mon Oct 23 11:40:47 EDT 2017
+sdk.dir=/Users/mcmaceac/Library/Android/sdk
